# xp3

./: .gitignore  Cargo.toml  README.md
123/: Config.tjs  セイバーエピローグ.ks
lib/: decoder.rs  extent.rs  file.rs  header.rs  info.rs  lib.rs  segment.rs  solve.rs  utils.rs
lib/cxdec/: .gitignore  code.rs  mod.rs
src/: Header.rs  Segment.rs  Solve.rs  XP3File.rs  XP3Info.rs  extent.rs  main.rs  utils.rs
