[package]
name = "xp3parser"
version = "1.0.0"
authors = ["9646516 <zyq855@gmail.com>", "Hikaru Terazono (3c1u) <3c1u@vulpesgames.tokyo>"]
edition = "2018"

[lib]
crate-type = ["rlib"]
name = "xp3"
path = "lib/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libflate="0.1.25"
clap = "2.33.0"
