[package]
name = "xp3parser"
version = "1.0.0"
authors = ["9646516 <zyq855@gmail.com>", "Hikaru Terazono (3c1u) <3c1u@vulpesgames.tokyo>"]
edition = "2018"

[lib]
crate-type = ["rlib"]
name = "xp3"
path = "lib/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libflate="0.1.25"
clap = "2.33.0"
log = "0.4.11"
simple_logger = "1.6.0"
lazy_static = "1.4.0"
miniserde = "0.1.13"
